# travel-ledger-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  repomix-output.xml  verification_report.md
.cursor/rules/: release-process.mdc
.github/ISSUE_TEMPLATE/: 06-release.yml  bug-report.yml  config.yml
.github/workflows/: release.yml  rust.yml  secret-scan.yml
desktop/: Makefile  README.md  package-lock.json  package.json  vite.config.ts
desktop/src/: App.css  App.test.tsx  App.tsx  api.ts  display.ts  (+3 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  service.rs  state.rs
docs/: README.md  ai.md  command-reference.md  current-work.md  data-model.md  development.md  export-import.md  future-roadmap-planning-memo.md  getting-started.md  github-workflow.md  index.md  long-term-version-strategy.md  markdown-export.md
src/: about.rs  advisor.rs  checklist.rs  cli_run.rs  config.rs  day.rs  db.rs  diff.rs  doctor.rs  estimate.rs  expense.rs  itinerary.rs  lib.rs  main.rs  markdown.rs  models.rs  money.rs  note.rs  participant.rs  receipt.rs  reservation.rs  stats.rs  trip.rs  trip_metadata.rs
tests/: about_cli.rs  day_cli.rs  db_cli.rs  doctor_advisor_json_cli.rs  estimate_cli.rs  expense_cli.rs  export_md_cli.rs  export_roundtrip_cli.rs  fragment_apply_cli.rs  fragment_validate_cli.rs  itinerary_cli.rs  lib_boundary.rs  not_found_cli.rs  note_cli.rs  okinawa_sesoko_seed_cli.rs  participant_cli.rs  proposal_materialize_cli.rs  proposal_show_inspect_cli.rs  proposal_validate_cli.rs  public_examples_validation_guard.rs  receipt_cli.rs  reservation_cli.rs  summary_cli.rs  test_workspace_cli.rs  trip_import_cli.rs  trip_metadata_cli.rs  trip_stats_cli.rs  validate_export_cli.rs
(+487 files in other folders)
