[package]
name = "caglla-cli"
version = "1.12.0"
edition = "2021"
description = "A local SQLite-based travel planning CLI."
authors = ["Tomohiro Awane"]
repository = "https://github.com/rcsv/caglla-cli"
readme = "README.md"
license = "MIT"
keywords = ["travel", "cli", "sqlite", "planner"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
