[package]
name = "travel-ledger-desktop"
version = "4.12.0"
description = "Travel Ledger Desktop — developer preview"
authors = ["Tomohiro Awane"]
edition = "2021"

[lib]
name = "travel_ledger_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
travel-ledger-cli = { path = "../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
rusqlite = { version = "0.40", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
